[package]
name = "health-check"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"

tokio = { version = "1", features = ["full"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["cli"]
cli = ["tokio", "clap", "indicatif"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys"]